--- a/my_flutter/pubspec.yaml
+++ b/my_flutter/pubspec.yaml
@@ -23,12 +23,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_swiper: ^1.1.6 
+  flutter_easyrefresh: ^2.0.4
+  flutter_cupertino_date_picker: ^1.0.12
+  flutter_screenutil: ^0.6.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-#banner轮播图
-    flutter_swiper : ^1.1.6 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
